--- a/src/wxParse/wxParse.wxss
+++ b/src/wxParse/wxParse.wxss
@@ -18,13 +18,13 @@
     line-height: 1.8;
 }
 view{
-    word-break:break-all; overflow:auto;
+    word-break:break-all; 
+    overflow:auto;
 }
 .wxParse-inline{
-    display: flex;
+    display: inline;
     margin: 0;
     padding: 0;
-    text-indent: 2em;
 }
 /*//标题 */
 .wxParse-div{margin: 0;padding: 0;}
@@ -38,32 +38,32 @@ view{
 .wxParse-h1 {
   font-size: 18px;
   font-weight: 400;
-  margin-bottom: .9em;
+  /* margin-bottom: .9em; */
 }
 .wxParse-h2 {
   font-size: 16px;
   font-weight: 400;
-  margin-bottom: .34em;
+  /* margin-bottom: .34em; */
 }
 .wxParse-h3 {
   font-weight: 400;
   font-size: 15px;
-  margin-bottom: .34em;
+  /* margin-bottom: .34em; */
 }
 .wxParse-h4 {
   font-weight: 400;
   font-size: 14px;
-  margin-bottom: .24em;
+  /* margin-bottom: .24em; */
 }
 .wxParse-h5 {
   font-weight: 400;
   font-size: 13px;
-  margin-bottom: .14em;
+  /* margin-bottom: .14em; */
 }
 .wxParse-h6 {
   font-weight: 400;
   font-size: 12px;
-  margin-bottom: .04em;
+  /* margin-bottom: .04em; */
 }
 
 .wxParse-h1, .wxParse-h2, .wxParse-h3, .wxParse-h4, .wxParse-h5, .wxParse-h6, .wxParse-b, .wxParse-strong  { font-weight: bolder }
